# DummyModel

./: CMakeLists.txt  README.md
cmake/: FindNetCDF.cmake
src/: CMakeLists.txt  dummy.f90  mesh.f90  poly2d.f90
